--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-The site is under development. Please check back later.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mehedi Hasan</title>
+</head>
+<body>
+    <p>The site is under development</p>
+</body>
+</html>
