add new images and update index.html with personal branding

--- a/index_org.html
+++ b/index_org.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Luther</title>
+    <title>Mehedi Hasan</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -56,14 +56,14 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Luther.</a></span>
+                <span class="mobile-home-link"><a href="index.html">Mehedi.</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li><a href="index.html" class="home-link">Luther.</a></li>
+                        <li><a href="index.html" class="home-link">Mehedi.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
@@ -92,7 +92,7 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            I am Luther, <br>
+                            I am Mehedi, <br>
                             a digital designer <br>
                             & frontend <br> 
                             developer based <br>
@@ -124,8 +124,8 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/about-photo.jpg" 
-                             srcset="images/about-photo.jpg 1x, images/about-photo@2x.jpg 2x" alt="" class="about-info__pic" data-animate-el>
+                        <img src="images/about-photo.png" 
+                             srcset="images/about-photo.jpg 1x, images/about-photo@2x.pnh 2x" alt="" class="about-info__pic" data-animate-el>
                     </div>
 
                     <div class="column lg-6 md-12">
