update index.html to reflect new professional title and enhance personal description

--- a/index_org.html
+++ b/index_org.html
@@ -88,15 +88,12 @@
 
                     <div class="column">
                         <div class="text-pretitle with-line">
-                            Hello World
+                            Hello World 
                         </div>
 
                         <h1 class="text-huge-title">
                             I am Mehedi, <br>
-                            a digital designer <br>
-                            & frontend <br> 
-                            developer based <br>
-                            in Somewhere.
+                            a Software Engineer. <br>
                         </h1>
                     </div>
 
@@ -125,7 +122,7 @@
 
                     <div class="column lg-6 md-12 about-info__pic-block">
                         <img src="images/about-photo.png" 
-                             srcset="images/about-photo.jpg 1x, images/about-photo@2x.pnh 2x" alt="" class="about-info__pic" data-animate-el>
+                             srcset="images/about-photo.png 1x, images/about-photo@2x.png 2x" alt="" class="about-info__pic" data-animate-el>
                     </div>
 
                     <div class="column lg-6 md-12">
@@ -135,11 +132,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                                velit esse cillum dolore eu fugiat nulla pariatur.
+                                Passionate about coding and problem-solving, I focus on building scalable backend systems and modern Android applications using Laravel, Kotlin, and Jetpack Compose. With a solid foundation in software engineering, I enjoy turning complex ideas into practical solutions. My journey spans open-source contributions, published apps, and professional development, reflecting both creativity and technical depth.
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
