update index.html to reflect new skills and job experiences

--- a/index_org.html
+++ b/index_org.html
@@ -147,12 +147,14 @@
                         <h2 class="text-pretitle" data-animate-el>Expertise</h2>
 
                         <ul class="skills-list h1" data-animate-el>
-                            <li>Visual Design</li>
-                            <li>Branding Identity</li>
-                            <li>UI Design</li>
-                            <li>Product Design</li>
-                            <li>Prototyping</li>
-                            <li>Illustration</li>
+                            <li>Programming</li>
+                            <li>Problem Solving</li>
+                            <li>Software Backend</li>
+                            <li>Web Applications</li>
+                            <li>Android Applications</li>
+                            <li>Databse Design</li>
+                            <li>Cybersecurity</li>
+                            <li>Blockchain</li>
                         </ul>
 
                     </div>
@@ -172,24 +174,36 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Dropbox</h3>
-                                    <h5 class="timeline__meta">Product Designer</h5>
-                                    <p class="timeline__timeframe">August 2019 - Present</p>
+                                    <h4 class="timeline__title">Mega Deals Limited</h4>
+                                    <h5 class="timeline__meta">Lead Software Engineer</h5>
+                                    <p class="timeline__timeframe">Feb 2024 - Present</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>At Mega Deals Limited, I work as Lead Software Engineer where I manage and maintain servers, oversee the company’s online platform built with PHP and Laravel, and ensure system stability. My role also involves testing, implementing new features, and optimizing performance to support business growth.</p>
                                 </div>
                             </div>
     
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Microsoft</h4>
-                                    <h5 class="timeline__meta">Frontend Developer</h5>
-                                    <p class="timeline__timeframe">August 2016 - July 2019</p>
+                                    <h4 class="timeline__title">BitMavrick</h4>
+                                    <h5 class="timeline__meta">Founder & Android Developer</h5>
+                                    <p class="timeline__timeframe">Nov 2023 - Present</p> 
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                    <p>Under my personal brand BitMavrick, I design, develop, and publish Android applications. I manage the full lifecycle of apps from concept to UI, deployment, maintain open-source projects, and experiment with new technologies to build polished, user-focused mobile solutions.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Pondit.com</h4>
+                                    <h5 class="timeline__meta">PHP & Laravel Intern</h5>
+                                    <p class="timeline__timeframe">Aug 2023 - Oct 2023</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>During my internship at Pondit.com, I contributed to building a full-scale e-commerce platform. I worked on both backend development with PHP and Laravel and frontend implementation using HTML, CSS, and JavaScript. The experience strengthened my skills in full-stack development, teamwork, and delivering functional web solutions.</p>
                                 </div>
                             </div>
     
