update social links in index.html to include GitHub, LinkedIn, Medium, and updated Twitter

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="#0">Behance</a></li>
-                        <li><a href="#0">Twitter</a></li>
-                        <li><a href="#0">Dribbble</a></li>
-                        <li><a href="#0">Instagram</a></li>
+                        <li><a href="https://github.com/BitMavrick">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/bitmavrick/">LinkedIn</a></li>
+                        <li><a href="https://medium.com/@bitmavrick">Medium</a></li>
+                        <li><a href="https://x.com/TheAlter72">Twitter</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
