--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                             <li>Problem Solving</li>
                             <li>Software Backend</li>
                             <li>Web Applications</li>
-                            <li>Android Applications</li>
-                            <li>Databse Design</li>
+                            <li>Mobile Applications</li>
+                            <li>Database Design</li>
                             <li>Cybersecurity</li>
                             <li>Blockchain</li>
                         </ul>
@@ -187,11 +187,11 @@
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">BitMavrick</h4>
-                                    <h5 class="timeline__meta">Founder & Android Developer</h5>
+                                    <h5 class="timeline__meta">Founder & Mobile Developer</h5>
                                     <p class="timeline__timeframe">Nov 2023 - Present</p> 
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Under my personal brand BitMavrick, I design, develop, and publish Android applications. I manage the full lifecycle of apps from concept to UI, deployment, maintain open-source projects, and experiment with new technologies to build polished, user-focused mobile solutions.</p>
+                                    <p>Under my personal brand BitMavrick, I design, develop, and publish mobile applications. I manage the full lifecycle of apps from concept to UI, deployment, maintain open-source projects, and experiment with new technologies to build polished, user-focused mobile solutions.</p>
                                 </div>
                             </div>
 
