Add new skills to portfolio and update project description for clarity

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                             <li>Database Design</li>
                             <li>Cybersecurity</li>
                             <li>Blockchain</li>
+                            <li>System Design</li>
+                            <li>R&D</li>
                         </ul>
 
                     </div>
@@ -227,7 +229,7 @@
                                     <p class="timeline__timeframe">Jan 2019 - Dec 2022</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>During my B.Sc in Software Engineering, I developed a strong foundation in C++, data structures, algorithms, Competitive Programming, Problem Solving, OOP, and Python programming. I explored cybersecurity, networking, and Linux, and completed a thesis on blockchain and cloud computing, focusing on optimizing crypto mining by distributing tasks across multiple devices.</p>
+                                    <p>During my B.Sc in Software Engineering, I developed a strong foundation in programming languages, data structures, algorithms, Competitive Programming, Problem Solving, OOC, OOP, Design Pattern, System design and Web Application Developments. I explored cybersecurity, networking, and Linux, and completed a thesis on blockchain and cloud computing, focusing on optimizing crypto mining by distributing tasks across multiple devices.</p>
                                 </div>
                             </div>
     
